Adjusted CSS for carousel to display correctly on smaller screens

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -73,6 +73,7 @@ blockquote p {
 .item > a > img {
   height: 550px; 
   width: 100%; 
+  margin: auto;
 }
 
 .carousel-caption {
